Quorum/Library/Tests/Actions/Pass/ReturnIfElseNum1.quorum
class Main
    action Main
        integer a = -2
        output foo(a)
    end

    action foo (integer a) returns number
        if a < 0
            return -1.0
        else
            return 1.0
        end
    end
end