Quorum/Library/Tests/Actions/Fail/MissingReturn1.quorum
class Main
    action Main
        bar(foo(1))
    end

    action foo (integer a) returns text
        if a = 1
            return "Spring"
        elseif a = 2
            return "Summer"
        elseif a = 3
            return "Fall"
        else

        end
    end

    action bar(text t)
        output t
    end
end